# CADaver

./: .gitignore  Cargo.toml  package-lock.json  package.json  plan.md  readme.md
backend/: Cargo.toml
backend/core/tests/: verify_origin_deser.rs
backend/src/: main.rs
core/: Cargo.toml
core/examples/: explore_kernel.rs
core/src/: lib.rs
core/src/evaluator/: ast.rs  generator.rs  mod.rs  runtime.rs
core/src/features/: dag.rs  mod.rs  types.rs
core/src/geometry/: intersection.rs  mod.rs  primitives.rs  tessellation.rs  utils_2d.rs  utils_3d.rs
core/src/kernel/: mod.rs  tests_boolean.rs  truck.rs  types.rs
core/src/microcad_kernel/: ast.rs  runtime.rs
core/src/modeling/: mod.rs
core/src/sketch/: chains.rs  measurement.rs  mod.rs  regions.rs  snap.rs  solver.rs  tests_dimensions_hv.rs  tests_distance_pl.rs  tests_ellipse.rs  tests_history.rs  tests_infrastructure.rs  tests_radius.rs  tests_solver.rs  tests_suppression.rs  tests_symmetry.rs  types.rs
core/src/topo/: generator.rs  mod.rs  naming.rs  registry.rs  selection.rs  tests_resolution.rs  tests_selection.rs  tests_stability.rs
core/src/units/: mod.rs
core/src/variables/: evaluator.rs  mod.rs  parser.rs  tests.rs  types.rs
core/tests/: extrude_regions.rs  loop_detection.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  reproduce_bug.ts  tsconfig.app.json  verify_angle_bug.ts  verify_angle_fix.ts  verify_fix.ts  verify_obtuse.ts
frontend/src/: App.css  App.tsx  commandRegistry.ts  expressionEvaluator.ts  index.css  sketchInputManager.ts  snapUtils.ts  test_keybindings.ts  types.ts
frontend/src/components/: BaseModal.tsx  BooleanModal.tsx  ChamferModal.tsx  CircularPatternModal.tsx  CommandPalette.tsx  ConfirmationModal.tsx  DimensionEditModal.tsx  DimensionHUD.tsx  ErrorToast.tsx  ExpressionInput.css  (+29 more)
manual-agent-instructions/: bugfix.md  bugs.md  continue.md  current-bugs.md  feature-request.md  frontend_refactor_plan.md  review.md  sketch.md
(+75 files in other folders)
