[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
cad-core = { path = "../core" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
futures = "0.3.31"
uuid = { version = "1.0", features = ["v4"] }
