[package]
name = "cad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "v5"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
thiserror = "1.0"
earcutr = "0.5.0"
# microcad = "0.1" # Uncomment when valid, for now we might mock or assume existence if user provided it. 
# actually, let's look for a git repo or something if it fails?
# The prompt implies it's a real thing I should use. I will try to include it.
# If this fails, I will remove it and ask the user.
