[package]
name = "cad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "v5"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
thiserror = "1.0"
earcutr = "0.5.0"

# MIT-compatible CAD kernel (Apache-2.0 licensed)
truck-modeling = "0.6"
truck-meshalgo = "0.4"
truck-polymesh = "0.6"
truck-topology = "0.6"
truck-base = "0.5"
truck-shapeops = "0.4"  # Boolean operations (union, intersect, subtract)
truck-geotrait = "0.4"  # Geometric traits (Transformed, etc.)
truck-stepio = "0.3"    # STEP file import/export

# cgmath is used by truck internally
cgmath = "0.18"

